--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
           <div class="footnote">
             说明：等时线为基于线路区间距离、设计速度与换乘时间的近似估算，实际出行时间会随时刻表与客流变化。
           </div>
+          <div class="footnote" style="margin-top: 8px;">
+            本项目的数据来自 <a href="https://github.com/Mick235711/Beijing-Subway-Tools" target="_blank" style="color: inherit;">Beijing-Subway-Tools</a> 项目，并遵守其 <a href="https://github.com/Mick235711/Beijing-Subway-Tools/blob/main/LICENSE" target="_blank" style="color: inherit;">MIT</a> 许可证。
+          </div>
         </aside>
       </div>
     </div>
